--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html>
   <head>
     <title>Ski listening advancement</title>
+    <style>
+      .title {
+        color: blue;
+      }
+    </style>
   </head>
   <body>
-    <h1>Ski listening advancement</h1>
+    <h1 class="title">Ski listening advancement</h1>
     <h2>Tow woeful organizer</h2>
     <p>
       Serve paralyzed dealing.
