--- a/index.html
+++ b/index.html
@@ -2,17 +2,21 @@
 <html>
   <head>
     <title>Ski listening advancement</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet"> 
     <style>
       .title {
         color: blue;
         font-size: 32px;
       }
+      .title, .subtitle, .text {
+        font-family: Roboto, 'DejaVu Sans', Arial, Helvetica, sans-serif;
+      }
     </style>
   </head>
   <body>
     <h1 class="title">Ski listening advancement</h1>
-    <h2>Tow woeful organizer</h2>
-    <p>
+    <h2 class="subtitle">Tow woeful organizer</h2>
+    <p class="text">
       Serve paralyzed dealing.
       Dust pliable dioxide.
       Pat eroded saloon.
@@ -25,7 +29,7 @@
       Waste chapel rapport.
       Whip perceptual residency.
     </p>
-    <p>
+    <p class="text">
       Scratch inbounds redistribution.
       Seal civic stoppage.
       Crack glorious suspension.
