--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
       .title, .subtitle, .text {
         font-family: Roboto, 'DejaVu Sans', Arial, Helvetica, sans-serif;
       }
+      .kitten {
+        border: 2px solid #000;
+      }
     </style>
   </head>
   <body>
@@ -29,6 +32,7 @@
       Waste chapel rapport.
       Whip perceptual residency.
     </p>
+    <img class="kitten" src="http://placekitten.com/640/480/" alt="Kitten! :3">
     <p class="text">
       Scratch inbounds redistribution.
       Seal civic stoppage.
