--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       Waste chapel rapport.
       Whip perceptual residency.
     </p>
-    <img class="kitten" src="http://placekitten.com/640/480/" alt="Kitten! :3">
+    <img class="kitten" src="http://placekitten.com/640/480" alt="Kitten! :3">
     <p class="text">
       Scratch inbounds redistribution.
       Seal civic stoppage.
