--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
       Waste chapel rapport.
       Whip perceptual residency.
     </p>
-    <img class="kitten" src="http://placekitten.com/640/480" alt="Kitten! :3">
+    <a href="http://somelink.com/">
+      <img class="kitten" src="http://placekitten.com/640/480" alt="Kitten! :3">
+    </a>
     <p class="text">
       Scratch inbounds redistribution.
       Seal civic stoppage.
