Add unordered list

--- a/index.html
+++ b/index.html
@@ -48,5 +48,10 @@
       Dust antiquarian metre.
       Plug startled patchwork.
     </p>
+    <ul>
+      <li>Bounce resultant machinery.</li>
+      <li>Curl dried maintenance.</li>
+      <li>Intend knowing mutation.</li>
+    </ul>
   </body>
 </html>
