Add ordered list

--- a/index.html
+++ b/index.html
@@ -53,5 +53,10 @@
       <li>Curl dried maintenance.</li>
       <li>Intend knowing mutation.</li>
     </ul>
+    <ol>
+      <li>Stop charcoal balls.</li>
+      <li>Moan grudging closeness.</li>
+      <li>Relax perplexed shopping.</li>
+    </ol>
   </body>
 </html>
