Add signature field

--- a/index.html
+++ b/index.html
@@ -58,5 +58,8 @@
       <li>Moan grudging closeness.</li>
       <li>Relax perplexed shopping.</li>
     </ol>
+    <p>I agree with this plan.</p>
+    <p>Signed,</p>
+    <p>X <input type="text" name="signature" id="signature" class="signature" placeholder="Reviewer's name" /></p>
   </body>
 </html>
