Add sign button

--- a/index.html
+++ b/index.html
@@ -58,8 +58,11 @@
       <li>Moan grudging closeness.</li>
       <li>Relax perplexed shopping.</li>
     </ol>
-    <p>I agree with this plan.</p>
-    <p>Signed,</p>
-    <p>X <input type="text" name="signature" id="signature" class="signature" placeholder="Reviewer's name" /></p>
+    <form action="https://ignorant-sack.gomix.me/">
+      <p>I agree with this plan.</p>
+      <p>Signed,</p>
+      <p>X <input type="text" name="signature" id="signature" class="signature" placeholder="Reviewer's name" /></p>
+      <button type="submit" name="sign" id="sign" class="sign-button">Sign</button>
+    </form>
   </body>
 </html>
