Add review ratings

--- a/index.html
+++ b/index.html
@@ -59,7 +59,11 @@
       <li>Relax perplexed shopping.</li>
     </ol>
     <form action="https://ignorant-sack.gomix.me/">
-      <p>I agree with this plan.</p>
+      <p>I review this plan as follows</p>
+      <label><input type="radio" name="rating" id="rating-agree" class="rating-agree">Agree</label>
+      <label><input type="radio" name="rating" id="rating-disagree" class="rating-disagree">Disagree</label>
+      <label><input type="radio" name="rating" id="rating-mixed" class="rating-mixed" checked>Mixed opinions</label>
+      <label><input type="checkbox" name="suggestions" id="suggestions" class="suggestions">I have suggestions</label>
       <p>Signed,</p>
       <p>X <input type="text" name="signature" id="signature" class="signature" placeholder="Reviewer's name" /></p>
       <button type="submit" name="sign" id="sign" class="sign-button">Sign</button>
