--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
       .kitten {
         border: 2px solid #000;
       }
+      .review {
+        background-color: yellow;
+      }
     </style>
   </head>
   <body>
@@ -58,15 +61,17 @@
       <li>Moan grudging closeness.</li>
       <li>Relax perplexed shopping.</li>
     </ol>
-    <form action="https://ignorant-sack.gomix.me/">
-      <p>I review this plan as follows</p>
-      <label><input type="radio" name="rating" id="rating-agree" class="rating-agree">Agree</label>
-      <label><input type="radio" name="rating" id="rating-disagree" class="rating-disagree">Disagree</label>
-      <label><input type="radio" name="rating" id="rating-mixed" class="rating-mixed" checked>Mixed opinions</label>
-      <label><input type="checkbox" name="suggestions" id="suggestions" class="suggestions">I have suggestions</label>
-      <p>Signed,</p>
-      <p>X <input type="text" name="signature" id="signature" class="signature" placeholder="Reviewer's name" /></p>
-      <button type="submit" name="sign" id="sign" class="sign-button">Sign</button>
-    </form>
+    <div class="review">
+      <form action="https://ignorant-sack.gomix.me/">
+        <p>I review this plan as follows:</p>
+        <label><input type="radio" name="rating" id="rating-agree" class="rating-agree">Agree</label>
+        <label><input type="radio" name="rating" id="rating-disagree" class="rating-disagree">Disagree</label>
+        <label><input type="radio" name="rating" id="rating-mixed" class="rating-mixed" checked>Mixed opinions</label>
+        <label><input type="checkbox" name="suggestions" id="suggestions" class="suggestions">I have suggestions</label>
+        <p>Signed,</p>
+        <p>X <input type="text" name="signature" id="signature" class="signature" placeholder="Reviewer's name" /></p>
+        <button type="submit" name="sign" id="sign" class="sign-button">Sign</button>
+      </form>
+    </div>
   </body>
 </html>
